[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
embedded-hal = "1.0.0"
gpiocdev-embedded-hal = "0.1.3"
socketcan = "3.5.0"
wasmtime = "45.0.0"
wasmtime-wasi = "45.0.0"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

wasmtime-wasi-can = { path = "../lib/host/wasmtime-wasi-can" }
wasmtime-wasi-gpio = { path = "../lib/host/wasmtime-wasi-gpio" }
sysfs-pwm-embedded-hal = { path = "../lib/host/sysfs-pwm-embedded-hal" }
